--- a/css/main.css
+++ b/css/main.css
@@ -1524,6 +1524,12 @@ nav.navbar.navbar-default.pink-color .navbar-nav li a:hover:after {
 .gifts-registry img {
 	max-width: 100%;
 }
+
+
+.max-distelsa {
+	margin-top: 30px;
+}
+
 .gifts-registry.gr-img-block a img {
 	border: 3px solid #BCBCB9;
 	padding: 7px;
